--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -593,6 +593,59 @@ nav {
     margin-top: 1.8rem;
 }
 
+/* QUIT [Lightbox] */
+#quit-outer-wrapper {
+    background-color: #2e3431a3;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+#quit-inner-wrapper {
+    background-color: #3a9561;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    row-gap: .5rem;
+    width: 78%;
+    padding: 1.7rem 1.5rem;
+}
+
+#quit-inner-wrapper h2 {
+    color: #233609;
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+#quit-inner-wrapper p {
+    color: #092c18;
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+#quit-inner-wrapper button,
+#quit-inner-wrapper a {
+    background-color: #092c18;
+    border-radius: 10px;
+    border: none;
+    font-size: 1rem;
+    line-height: 1.8rem;
+    width: 8rem;
+    text-align: center;
+}
+
+#quit-inner-wrapper button {
+    margin-top: 1.8rem;
+}
+
+#quit-inner-wrapper button:hover {
+    cursor: pointer;
+}
+
 /* MEDIA QUERIES */
 @media (min-width: 600px) {
 
@@ -656,7 +709,7 @@ nav {
     #question-container > h2 {
         font-size: 1.6rem;
     }
-    
+
     #question-text {
         font-size: 1.6rem;
     }
@@ -712,6 +765,27 @@ nav {
 
     #gamewon-inner-wrapper button,
     #gamewon-inner-wrapper a {
+        font-size: 1.3rem;
+        line-height: 2.2rem;
+        width: 12rem;
+    }
+
+    /* Quit [Lightbox] */
+    #quit-inner-wrapper {
+        width: 32.35rem;
+        height: 18rem;
+    }
+
+    #quit-inner-wrapper h2 {
+        font-size: 2.2rem;
+    }
+
+    #quit-inner-wrapper p {
+        font-size: 1.6rem;
+    }
+
+    #quit-inner-wrapper button,
+    #quit-inner-wrapper a {
         font-size: 1.3rem;
         line-height: 2.2rem;
         width: 12rem;
