--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,183 +143,6 @@ body {
     cursor: pointer;
 }
 
-/* ENTER NAME [Lightbox] */
-#username-outer-wrapper {
-    background-color: #2e3431a3;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-}
-
-#username-inner-wrapper {
-    background-color: var(--clr-raisin-black);
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    row-gap: 2rem;
-    width: 80%;
-    min-height: 50vh;
-    padding: 1rem;
-    text-align: center;
-    position: relative;
-}
-
-.close-username-container {
-    height: 90%;
-    position: absolute;
-    right: 8%;
-}
-
-#close-username {
-    color: var(--clr-sea-green);
-    font-size: 2.5rem;
-    position: sticky;
-    top: 0;
-}
-
-#close-username:hover {
-    color: #3a956187;
-    cursor: pointer;
-}
-
-#username-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 1rem;
-}
-
-#username {
-    box-sizing: border-box;
-    color: black;
-    font-size: 1.1rem;
-    width: 12rem;
-    height: 2rem;
-    padding: .5rem 1rem;
-    text-align: center;
-}
-
-#username-btn {
-    background-color: var(--clr-sea-green);
-    border: none;
-    border-radius: 6px;
-    font-size: 1rem;
-    width: 9rem;
-    height: 1.8rem;
-    cursor: pointer;
-}
-
-#username-btn:hover {
-    background-color: #3a956187;
-}
-
-#username-feedback {
-    display: block;
-    height: 2rem;
-}
-
-/* HOW TO PLAY [Lightbox] */
-#howtoplay-outer-wrapper {
-    display: none;
-    background-color: none;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-}
-
-#howtoplay-inner-wrapper {
-    background-color: var(--clr-raisin-black);
-    border: 1px solid white;
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
-    margin: 0 auto;
-    padding: 1rem 1.5rem;
-    width: 78%;
-    height: 70vh;
-    overflow: auto;
-    position: relative;
-}
-
-.close-howtoplay-container {
-    height: 120%;
-    position: absolute;
-    right: 8%;
-}
-
-#close-howtoplay {            /* 'x' close icon - How to Play */
-    color: var(--clr-sea-green);
-    font-size: 2.5rem;
-    position: sticky;
-    top: 0;
-}
-
-#close-howtoplay:hover {
-    color: #3a956187;
-    cursor: pointer;
-}
-
-#howtoplay-heading {          /* main heading - How to Play */
-    border-bottom: 2px solid var(--clr-burlywood);
-    color: #8cc18c;
-    font-size: 1.8rem;
-    line-height: 3rem;
-    text-align: center;
-    margin: 0 0 1rem;
-}
-
-#howtoplay-inner-wrapper h3 {     /* subheadings - How to Play */
-    color: #a6bca6;
-    font-size: 1.3rem;
-    margin: .8rem 0;
-    text-align: center;
-}
-
-#howtoplay-inner-wrapper li {     /* bullet points - How to Play */
-    list-style: disc;
-    list-style-position: outside;
-    margin: .5rem 0 0 1rem;
-}
-
-#lifeline-image {             /* lifeline image - How to Play */
-    display: block;
-    margin: .3rem auto 0;
-    width: 15rem;
-}
-
-/* COUNTDOWN TO START [Lightbox] */
-#countdown-outer-wrapper {
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-}
-
-#countdown-inner-wrapper {
-    background-color: rgba(18, 47, 10, 0.803);
-    border-radius: 50%;
-    width: 15rem;
-    height: 15rem;
-}
-
-#countdown {
-    color: #e2dca1;
-    display: block;
-    font-size: 10rem;
-    text-align: center;
-    line-height: 15rem;
-}
-
 /* GAME PAGE [Start] */
 
 /* navbar - Game Page */
@@ -579,6 +402,189 @@ nav {
 
 /* 404 PAGE [End] */
 
+/* ENTER NAME [Lightbox] */
+
+#username-outer-wrapper {
+    background-color: #2e3431a3;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+#username-inner-wrapper {
+    background-color: var(--clr-raisin-black);
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 1.8rem;
+    width: 80%;
+    height: 27rem;
+    padding: 1rem;
+    text-align: center;
+    position: relative;
+}
+
+#username-inner-wrapper > h2 {
+    font-size: 1.3rem;
+    margin-top: 1.5rem;
+}
+
+.close-username-container {
+    height: 90%;
+    position: absolute;
+    right: 8%;
+}
+
+#close-username {
+    color: var(--clr-sea-green);
+    font-size: 2.5rem;
+    position: sticky;
+    top: 0;
+}
+
+#close-username:hover {
+    color: #3a956187;
+    cursor: pointer;
+}
+
+#username-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1.5rem;
+}
+
+#username {
+    box-sizing: border-box;
+    color: black;
+    font-size: 1.1rem;
+    width: 12rem;
+    height: 2rem;
+    padding: .5rem 1rem;
+    text-align: center;
+}
+
+#username-btn {
+    background-color: var(--clr-sea-green);
+    border: none;
+    border-radius: 6px;
+    font-size: 1rem;
+    width: 9rem;
+    height: 1.8rem;
+    cursor: pointer;
+}
+
+#username-btn:hover {
+    background-color: #3a956187;
+}
+
+#username-feedback {
+    display: block;
+    height: 2rem;
+}
+
+/* HOW TO PLAY [Lightbox] */
+#howtoplay-outer-wrapper {
+    display: none;
+    background-color: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+#howtoplay-inner-wrapper {
+    background-color: var(--clr-raisin-black);
+    border: 1px solid white;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    margin: 0 auto;
+    padding: 1rem 1.5rem;
+    width: 78%;
+    height: 70vh;
+    overflow: auto;
+    position: relative;
+}
+
+.close-howtoplay-container {
+    height: 120%;
+    position: absolute;
+    right: 8%;
+}
+
+#close-howtoplay {            /* 'x' close icon - How to Play */
+    color: var(--clr-sea-green);
+    font-size: 2.5rem;
+    position: sticky;
+    top: 0;
+}
+
+#close-howtoplay:hover {
+    color: #3a956187;
+    cursor: pointer;
+}
+
+#howtoplay-heading {          /* main heading - How to Play */
+    border-bottom: 2px solid var(--clr-burlywood);
+    color: #8cc18c;
+    font-size: 1.8rem;
+    line-height: 3rem;
+    text-align: center;
+    margin: 0 0 1rem;
+}
+
+#howtoplay-inner-wrapper h3 {     /* subheadings - How to Play */
+    color: #a6bca6;
+    font-size: 1.3rem;
+    margin: .8rem 0;
+    text-align: center;
+}
+
+#howtoplay-inner-wrapper li {     /* bullet points - How to Play */
+    list-style: disc;
+    list-style-position: outside;
+    margin: .5rem 0 0 1rem;
+}
+
+#lifeline-image {             /* lifeline image - How to Play */
+    display: block;
+    margin: .3rem auto 0;
+    width: 15rem;
+}
+
+/* COUNTDOWN TO START [Lightbox] */
+#countdown-outer-wrapper {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+#countdown-inner-wrapper {
+    background-color: rgba(18, 47, 10, 0.803);
+    border-radius: 50%;
+    width: 15rem;
+    height: 15rem;
+}
+
+#countdown {
+    color: #e2dca1;
+    display: block;
+    font-size: 10rem;
+    text-align: center;
+    line-height: 15rem;
+}
+
 /* GAME OVER [Lightbox] */
 #gameover-outer-wrapper {
     background-color: #2e3431a3;
@@ -748,24 +754,6 @@ nav {
 
 /* MEDIA QUERIES */
 @media (min-width: 600px) {
-
-	/* ENTER NAME [Lightbox] */
-    #username-inner-wrapper {
-        width: 30rem;
-        height: 14rem;
-    }
-
-    /* How To Play [Lightbox] */
-    #howtoplay-inner-wrapper {
-        padding: 1.5rem 3rem 3rem;
-        width: 32rem
-    }
-
-    #howtoplay-inner-wrapper ul,
-    #howtoplay-inner-wrapper p {
-        font-size: 1.1rem;
-    }
-
     /* Game Page */
     #logo-wrapper-nav {
         height: 4rem;
@@ -821,6 +809,27 @@ nav {
     .answer-button {
         font-size: 1.4rem;
         min-height: 3.8rem;
+    }
+
+	/* ENTER NAME [Lightbox] */
+    #username-inner-wrapper {
+        width: 30rem;
+        height: 20rem;
+    }
+
+    #username {
+        width: 14rem;
+    }
+
+    /* How To Play [Lightbox] */
+    #howtoplay-inner-wrapper {
+        padding: 1.5rem 3rem 3rem;
+        width: 32rem
+    }
+
+    #howtoplay-inner-wrapper ul,
+    #howtoplay-inner-wrapper p {
+        font-size: 1.1rem;
     }
 
     /* Game Over [Lightbox] */
