--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -788,6 +788,46 @@ nav {    /* contains logo & nav menu */
 /* QUIT Lightbox [End] */
 
 /* MEDIA QUERIES */
+	
+@media (min-width: 390px) {
+    /* GAME PAGE */
+    #nav-menu {
+        font-size: 1.1rem;
+    }
+
+    #game-area {
+        border: 1px solid darkgoldenrod;
+        border-radius: 10px;
+        box-sizing: border-box;
+        height: 39rem;
+    }
+
+    #player-wrapper > * {
+        font-size: 1rem;
+    }
+
+    #player-name {
+        font-size: 1.2rem;
+    }
+
+    #question-container {
+        min-height: 10rem;
+    }
+
+    .answer-button {
+        min-height: 3rem;
+    }
+
+    /* HOW TO PLAY lightbox */
+    #howtoplay-inner-wrapper {
+        font-size: 1rem;
+    }
+    
+    #howtoplay-inner-wrapper h3 {
+        font-size: 1.3rem;
+    }
+}
+
 @media (min-width: 600px) {
     /* Game Page */
     #logo-wrapper-nav {
