--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,10 +56,14 @@
     text-decoration: none;
 }
 
-/* General Body Document */
+html {
+    height: 100%;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: var(--clr-raisin-black);
+    height: 100%;
 }
 
 /* HOME PAGE [Start] */
@@ -137,7 +141,6 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
-    height: 100vh;
 }
 
 nav {    /* contains logo & nav menu */
@@ -191,7 +194,7 @@ nav {    /* contains logo & nav menu */
 #game-area-wrapper {
     display: flex;
     align-items: center;
-    flex: 1;
+    flex: 1 0 auto;
 }
 
 #game-area {
@@ -380,7 +383,6 @@ nav {    /* contains logo & nav menu */
 #page-404-body {
     display: flex;
     flex-direction: column;
-    height: 100vh;
 }
 
 #page-404-outer-wrapper {
@@ -388,7 +390,7 @@ nav {    /* contains logo & nav menu */
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex: 1;
+    flex: 1 0 auto;
 }
 
 #page-404-inner-wrapper {
