--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,11 +67,16 @@ body {
 }
 
 /* HOME PAGE [Start] */
+#homepage-body {
+    box-sizing: border-box;
+    padding: 20vh 0 0;
+}
+
 #logo-wrapper {
     background-color: black;
     box-shadow: 2px 0 2px 10px var(--clr-harlequin-green);
     height: 5rem;
-    margin: 20vh 0 5rem;
+    margin-bottom: 5rem;
 }
 
 #logo-homepage {
