--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,7 +443,7 @@ nav {    /* contains logo & nav menu */
     justify-content: center;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
 }
 
@@ -527,7 +527,7 @@ nav {    /* contains logo & nav menu */
     display: none;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
 }
 
@@ -601,7 +601,7 @@ nav {    /* contains logo & nav menu */
     justify-content: center;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
 }
 
@@ -629,7 +629,7 @@ nav {    /* contains logo & nav menu */
     justify-content: center;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
 }
 
@@ -682,7 +682,7 @@ nav {    /* contains logo & nav menu */
     justify-content: center;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
 }
 
@@ -745,7 +745,7 @@ nav {    /* contains logo & nav menu */
     justify-content: center;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
 }
 
