--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,17 @@
     text-align: center;
 }
 
+.overlay-bg {    /* covers the entire body element */
+    background-color: #2e3431a3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+}
+
 /* Remove Default Global Styles */
 * { 
     color: var(--clr-snow);
@@ -436,17 +447,6 @@ nav {    /* contains logo & nav menu */
 /* 404 PAGE [End] */
 
 /* ENTER NAME Lightbox [Start] */
-#username-outer-wrapper {
-    background-color: #2e3431a3;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-}
-
 #username-inner-wrapper {
     background-color: var(--clr-raisin-black);
     box-sizing: border-box;
@@ -622,17 +622,6 @@ nav {    /* contains logo & nav menu */
 /* COUNTDOWN TO START Lightbox [End] */
 
 /* GAME OVER Lightbox [Start] */
-#gameover-outer-wrapper {
-    background-color: #2e3431a3;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-}
-
 #gameover-inner-wrapper {
     background-color: #3a9561;
     display: flex;
@@ -675,17 +664,6 @@ nav {    /* contains logo & nav menu */
 /* GAME OVER Lightbox [End] */
 
 /* GAME WON Lightbox [Start] */
-#gamewon-outer-wrapper {
-    background-color: #2e3431a3;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-}
-
 #gamewon-inner-wrapper {
     background-color: #3a9561;
     display: flex;
@@ -730,6 +708,7 @@ nav {    /* contains logo & nav menu */
     line-height: 1.8rem;
     width: 8rem;
     text-align: center;
+    cursor: pointer;
 }
 
 #gamewon-inner-wrapper button {
@@ -738,17 +717,6 @@ nav {    /* contains logo & nav menu */
 /* GAME WON Lightbox [End] */
 
 /* QUIT Lightbox [Start] */
-#quit-outer-wrapper {
-    background-color: #2e3431a3;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-}
-
 #quit-inner-wrapper {
     background-color: #3a9561;
     display: flex;
@@ -795,7 +763,6 @@ nav {    /* contains logo & nav menu */
 /* QUIT Lightbox [End] */
 
 /* MEDIA QUERIES */
-	
 @media (min-width: 390px) {
     /* GAME PAGE */
     #nav-menu {
