--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,6 @@
 }
 
 .overlay-bg {    /* covers the entire body element */
-    background-color: #2e3431a3;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,6 +55,10 @@
     height: 100%;
     position: fixed;
     top: 0;
+}
+
+.overlay-bgcolor {
+    background-color: #2e3431a3;
 }
 
 /* Remove Default Global Styles */
